# local-llm

./: .aider.conf.yml  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  llm-configuration-research.md  local-llm_and_open-claw.md  opencode.json  verification-report.md
.claude/: index.md  plan-v2.md  plan.md  session-context.md  session-handoff-2026-02-08.md  session-handoff-2026-02-11.md  session-log.md  settings.json  tasks.md  wsl2-setup-history.md
.githooks/: pre-commit
.memories/: KNOWLEDGE.md  QUICK.md
benchmarks/: compare-persona-designer.sh  frontier-review.md  package-lock.json  package.json  run-benchmark.sh  test-build-persona.sh  test-detect.sh  test-ollama-client.sh
docker/: benchmark-output.json  docker-compose.yml  hello-world.go  init-docker.sh  test-output.json
docs/: agent-interaction-principles.md  closing-the-gap.md  concepts-local-llm-ecosystem.md  model-strategy.md  modelfile-reference.md  sampling-parameters.md  scaffolding-template.md  vision-and-intent.md
evaluator/: README.md  run-benchmark.sh  run-evaluate.sh
mcp-server/: .gitignore  README.md  pyproject.toml  run-server.sh
mcp-server/.memories/: KNOWLEDGE.md  QUICK.md
mcp-server/src/ollama_mcp/: __init__.py  __main__.py  client.py  config.py  registry.py  server.py
modelfiles/: aider-qwen25.Modelfile  angular-qwen3.Modelfile  api-docs-qwen3.Modelfile  architect-qwen3.Modelfile  aws-qwen3.Modelfile  be-architect-qwen3.Modelfile  career-coach-qwen3.Modelfile  classifier-qwen3.Modelfile  classifier-qwen35.Modelfile  classifier-qwen3coder.Modelfile  go-qwen3.Modelfile  (+40 more)
(+331 files in other folders)
