[project]
name = "ollama-mcp"
version = "0.1.0"
description = "MCP server wrapping Ollama /api/chat for Claude Code integration"
readme = "README.md"
authors = [
    { name = "Leandro Rocha", email = "leandrocdarocha@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
